--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.8.4",
+		"ethers": "^6.13.5",
 		"next": "14.1.0",
 		"react": "^18.3",
 		"react-dom": "^18.3",
-		"thirdweb": "^5"
+		"thirdweb": "^5",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/uuid": "^10.0.0",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.0",
